--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==5.2.6
+Django==5.0.8
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
 Pillow==10.0.1
 whitenoise==6.6.0
+setuptools>=65.0.0
+wheel>=0.38.0
