--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,5 @@ whitenoise==6.6.0
 setuptools>=65.0.0
 wheel>=0.38.0
 dj-database-url==2.1.0
-reportlab==4.0.4
-pdf2image==1.16.3
+playwright==1.55.0
 beautifulsoup4==4.12.2
-selenium==4.15.0
