Fix Railway Playwright deployment: Add browser installation to Procfile and railway.json
- Updated Procfile to install Playwright browsers before starting Django
- Added railway.json with proper build configuration
- Updated package.json with --with-deps flag for system dependencies
- This should resolve the 'Executable doesn't exist' error on Railway production

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "School Organizer Django Application",
   "scripts": {
-    "postinstall": "playwright install chromium"
+    "postinstall": "playwright install --with-deps chromium",
+    "build": "playwright install --with-deps chromium"
   },
   "dependencies": {
-    "@playwright/test": "^1.55.0"
+    "playwright": "1.55.0"
   },
   "engines": {
     "node": ">=18.0.0"
