Fix Playwright system dependencies: add missing libraries to nixpacks
- Add all missing system libraries to nixpacks.toml (glib, nss, xorg, mesa, etc.)
- Update startup script to always run install-deps to ensure dependencies
- This should resolve the Playwright host validation warnings
- Async error is completely fixed, now fixing PDF generation dependencies

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,27 @@
 [phases.setup]
-nixPkgs = ['python3', 'pip', 'nodejs', 'npm']
+nixPkgs = [
+  'python3', 
+  'pip', 
+  'nodejs', 
+  'npm',
+  'glib',
+  'nss',
+  'nspr',
+  'atk',
+  'at-spi2-atk',
+  'libcups',
+  'libxkbcommon',
+  'xorg.libX11',
+  'xorg.libXcomposite',
+  'xorg.libXdamage',
+  'xorg.libXext',
+  'xorg.libXfixes',
+  'xorg.libXrandr',
+  'mesa',
+  'cairo',
+  'pango',
+  'alsa-lib'
+]
 
 [phases.install]
 cmds = [
